--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a31afb1
-	trimbase = 
+	trim = eca_a9_control/eca_a9_control
+	base = 24256c7
+	trimbase = a31afb1
 	parent = upstream
 	previous = 34f96df
