--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 96f2885
-	trimbase = 
+	trim = eca_a9_gazebo
+	base = c203a06
+	trimbase = 96f2885
 	parent = upstream
 	previous = 34f96df
