--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 48d1e7e
-	trimbase = 
+	trim = eca_a9_description
+	base = f0505ab
+	trimbase = 48d1e7e
 	parent = upstream
 	previous = 34f96df
