--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 24256c7
+	base = 50b2e17
 	trimbase = 
 	parent = release/kinetic/eca_a9_control
-	previous = 
+	previous = 24256c7
