--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 063d5cb
+	base = a8364ee
 	trimbase = 
 	parent = debian/kinetic/eca_a9_control
-	previous = 
+	previous = 063d5cb
