--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c203a06
+	base = a38ee7d
 	trimbase = 
 	parent = release/kinetic/eca_a9_gazebo
-	previous = 
+	previous = c203a06
