--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d19f14
+	base = b7c235c
 	trimbase = 
 	parent = debian/kinetic/eca_a9_gazebo
-	previous = 
+	previous = 6d19f14
