--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0505ab
+	base = 5463004
 	trimbase = 
 	parent = release/kinetic/eca_a9_description
-	previous = 
+	previous = f0505ab
