--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3213892
+	base = 5da8c17
 	trimbase = 
 	parent = debian/kinetic/eca_a9_description
-	previous = 
+	previous = 3213892
