--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 651edc3
-	trimbase = 
+	trim = eca_a9_control/eca_a9_control
+	base = ce48f42
+	trimbase = 651edc3
 	parent = upstream
 	previous = 34f96df
