--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f64ade3
-	trimbase = 
+	trim = eca_a9_gazebo
+	base = 8dfeb7e
+	trimbase = f64ade3
 	parent = upstream
 	previous = 34f96df
