--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 997e97a
-	trimbase = 
+	trim = eca_a9_description
+	base = 9f0b71d
+	trimbase = 997e97a
 	parent = upstream
 	previous = 34f96df
