--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce48f42
+	base = bbd3c48
 	trimbase = 
 	parent = release/lunar/eca_a9_control
-	previous = 
+	previous = ce48f42
