--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e351e9
+	base = 81740be
 	trimbase = 
 	parent = debian/lunar/eca_a9_control
-	previous = 
+	previous = 7e351e9
