--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8dfeb7e
+	base = 42e6f91
 	trimbase = 
 	parent = release/lunar/eca_a9_gazebo
-	previous = 
+	previous = 8dfeb7e
