--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 653e645
+	base = 6f752c9
 	trimbase = 
 	parent = debian/lunar/eca_a9_gazebo
-	previous = 
+	previous = 653e645
