--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9f0b71d
+	base = f133882
 	trimbase = 
 	parent = release/lunar/eca_a9_description
-	previous = 
+	previous = 9f0b71d
