--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b00513e
+	base = a9c76de
 	trimbase = 
 	parent = debian/lunar/eca_a9_description
-	previous = 
+	previous = b00513e
