--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 287fbed
+	base = 7aed6d9
 	trimbase = 
 	parent = debian/lunar/eca_a9_control
-	previous = 
+	previous = 287fbed
