--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c0707ec
+	base = 515aa88
 	trimbase = 
 	parent = debian/lunar/eca_a9_gazebo
-	previous = 
+	previous = c0707ec
