--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b854a5
+	base = ddac300
 	trimbase = 
 	parent = debian/lunar/eca_a9_description
-	previous = 
+	previous = 7b854a5
