--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 951c60f
-	trimbase = 
+	trim = eca_a9_control/eca_a9_control
+	base = 7b45275
+	trimbase = 951c60f
 	parent = upstream
 	previous = 34f96df
