--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = df13f03
-	trimbase = 
+	trim = eca_a9_gazebo
+	base = 932bcc9
+	trimbase = df13f03
 	parent = upstream
 	previous = 34f96df
