--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fc4dd12
-	trimbase = 
+	trim = eca_a9_description
+	base = 3bf44b5
+	trimbase = fc4dd12
 	parent = upstream
 	previous = 34f96df
