--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 23e4094
+	base = e281493
 	trimbase = 
 	parent = debian/melodic/eca_a9_control
-	previous = 
+	previous = 23e4094
