--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 932bcc9
+	base = 8a687f7
 	trimbase = 
 	parent = release/melodic/eca_a9_gazebo
-	previous = 
+	previous = 932bcc9
