--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3591f00
+	base = 4a24d98
 	trimbase = 
 	parent = debian/melodic/eca_a9_gazebo
-	previous = 
+	previous = 3591f00
