--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3bf44b5
+	base = 0578eb4
 	trimbase = 
 	parent = release/melodic/eca_a9_description
-	previous = 
+	previous = 3bf44b5
