--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ecc877a
+	base = eaa62b1
 	trimbase = 
 	parent = debian/melodic/eca_a9_description
-	previous = 
+	previous = ecc877a
