--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87bf486
+	base = 6d7351a
 	trimbase = 
 	parent = debian/melodic/eca_a9_control
-	previous = 
+	previous = 87bf486
