--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05cf5e6
+	base = 6892f75
 	trimbase = 
 	parent = debian/melodic/eca_a9_gazebo
-	previous = 
+	previous = 05cf5e6
