--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5cb7ed0
+	base = 07c996a
 	trimbase = 
 	parent = debian/melodic/eca_a9_description
-	previous = 
+	previous = 5cb7ed0
