--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b45275
+	base = cb9270a
 	trimbase = 
 	parent = release/melodic/eca_a9_control
-	previous = 
+	previous = 7b45275
