--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2982148
+	base = e1363ab
 	trimbase = 
 	parent = rpm/melodic/eca_a9_control
-	previous = 
+	previous = 2982148
