--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0fc7f25
+	base = 5c23bab
 	trimbase = 
 	parent = rpm/melodic/eca_a9_gazebo
-	previous = 
+	previous = 0fc7f25
