--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83e14cc
+	base = a68f4bd
 	trimbase = 
 	parent = rpm/melodic/eca_a9_description
-	previous = 
+	previous = 83e14cc
